Added logout button

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -34,3 +34,13 @@ section {
 {
   width:100px;
 }
+
+.right
+  {
+    text-align: right;
+    margin-right: 10px;
+  }
+
+  .example-spacer {
+    flex: 1 1 auto;
+  }
