--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,10 @@
       Home
       </button>
     <button mat-flat-button color="primary" routerLink="/employees">
-   Manage Employees
+      Manage Employees
+    </button>
+        <button mat-flat-button color="primary" (click)="logout()">
+    Logout
     </button>
   </section>
 </mat-toolbar>
